@@ -1,3 +1,12 @@
+2008-11-24  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>
+
+	* src/av-cp/main.c:
+	* src/universal-cp/main.c:
+	* src/upload/main.c:
+
+        Use g_printerr() instead of g_critical() in case of problems. Based on
+        a patch by Sven Neumann <s.neumann@phase-zero.de>.
+
 2008-11-06  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>
 
 	* AUTHORS:
